; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_ndisc.c_ndisc_netdev_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_ndisc.c_ndisc_netdev_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.net_device = type { i32 }
%struct.net = type { i32 }

@nd_tbl = common dso_local global i32 0, align 4
@NOTIFY_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @ndisc_netdev_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ndisc_netdev_event(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.net_device*, align 8
  %8 = alloca %struct.net*, align 8
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.net_device*
  store %struct.net_device* %10, %struct.net_device** %7, align 8
  %11 = load %struct.net_device*, %struct.net_device** %7, align 8
  %12 = call %struct.net* @dev_net(%struct.net_device* %11)
  store %struct.net* %12, %struct.net** %8, align 8
  %13 = load i64, i64* %5, align 8
  switch i64 %13, label %24 [
    i64 129, label %14
    i64 128, label %19
  ]

14:                                               ; preds = %3
  %15 = load %struct.net_device*, %struct.net_device** %7, align 8
  %16 = call i32 @neigh_changeaddr(i32* @nd_tbl, %struct.net_device* %15)
  %17 = load %struct.net*, %struct.net** %8, align 8
  %18 = call i32 @fib6_run_gc(i32 0, %struct.net* %17, i32 0)
  br label %25

19:                                               ; preds = %3
  %20 = load %struct.net_device*, %struct.net_device** %7, align 8
  %21 = call i32 @neigh_ifdown(i32* @nd_tbl, %struct.net_device* %20)
  %22 = load %struct.net*, %struct.net** %8, align 8
  %23 = call i32 @fib6_run_gc(i32 0, %struct.net* %22, i32 0)
  br label %25

24:                                               ; preds = %3
  br label %25

25:                                               ; preds = %24, %19, %14
  %26 = load i32, i32* @NOTIFY_DONE, align 4
  ret i32 %26
}

declare dso_local %struct.net* @dev_net(%struct.net_device*) #1

declare dso_local i32 @neigh_changeaddr(i32*, %struct.net_device*) #1

declare dso_local i32 @fib6_run_gc(i32, %struct.net*, i32) #1

declare dso_local i32 @neigh_ifdown(i32*, %struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
